# p_69_cerver_relay

./: POOLS.md  pyproject.toml
branch_monkey_mcp/: _version.py  infisical_client.py  kompany_cli.py  provider_setup.py  relay_client.py  relay_config.py  relay_launchd.py  relay_tui.py  workflow.py  workflow_commands.py  workflow_engine.py
branch_monkey_mcp/bridge_and_local_actions/: agent_manager.py  cli_providers.py  dev_server_manager.py  gemma_runner.py  ollama_runner.py  xai_runner.py
branch_monkey_mcp/bridge_and_local_actions/routes/: agents.py  cerver_provider.py  git.py  git_graph.py  merge.py  merge_ops.py  projects.py  projects_ops.py
branch_monkey_mcp/cerver_compute/: client.py  execution.py  provider.py
branch_monkey_mcp/cerver_connect_transport/: client.py
branch_monkey_mcp/computer_runtime/: agent_environment.py  cli_runtime.py  execution.py  test_pool_cleanroom.py
branch_monkey_mcp/kompany_local_transport/: relay_forwarding.py  relay_registration.py
branch_monkey_mcp/kompany_mcp/tools/: projects.py  task_services.py  tasks.py
branch_monkey_mcp/static/: dashboard.html
tests/: test_cerver_compute_client.py  test_cerver_compute_execution.py  test_connection_logger.py  test_gemma_provider.py  test_transcript_dedup.py
