[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
# Package name kept as branch-monkey-mcp for now — renaming it would
# touch every `from branch_monkey_mcp.X import Y` in the codebase and
# requires deciding what to do with the kompany_mcp/ sub-package.
# Tracked as housekeeping. User-facing surface (binaries, install
# URL, repo, TUI) already says cerver-relay.
name = "branch-monkey-mcp"
version = "0.4.0"
description = "Cerver Relay (local-compute client) + Kompany MCP Server. Registers a machine as private compute on cerver.ai and exposes the kompany.dev MCP toolbelt to Claude Code."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Eyal Goren" }
]
keywords = ["mcp", "claude", "claude-code", "cerver", "ai-infrastructure", "ai-agents", "kompany"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp>=1.0.0",
    "requests>=2.28.0",
    "httpx>=0.24.0",
    "websockets>=13.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
    "pyngrok>=7.0.0",
    "pyyaml>=6.0",
]

[project.scripts]
# Cerver-facing binaries. The relay registers your machine as a private
# compute on cerver; add-provider walks you through wiring third-party
# AI / compute provider credentials into your Infisical, with verification.
cerver-relay = "branch_monkey_mcp.relay_client:main"
cerver-add-provider = "branch_monkey_mcp.provider_setup:main"
branch-monkey-relay = "branch_monkey_mcp.relay_client:main"

# Kompany-facing binaries (unchanged — these still serve the
# kompany.dev MCP server and workflow runner).
branch-monkey-mcp = "branch_monkey_mcp.kompany_mcp:main"
branch-monkey-proxy = "branch_monkey_mcp.dev_proxy:main"
kompany-workflow = "branch_monkey_mcp.workflow:main"

# kompany CLI — bulk/shell-friendly companion to the MCP. Same auth,
# same endpoints, designed for xargs pipes (see branch_monkey_mcp/kompany_cli.py).
kompany = "branch_monkey_mcp.kompany_cli:main"

[project.urls]
Homepage      = "https://cerver.ai"
Repository    = "https://github.com/eyal-gor/p_69_cerver_relay"
Documentation = "https://cerver.ai/docs.html"
Install       = "https://cerver.ai/install.sh"

[tool.hatch.build.targets.wheel]
packages = ["branch_monkey_mcp"]

[tool.hatch.build]
include = [
    "branch_monkey_mcp/**/*.py",
    "branch_monkey_mcp/**/*.md",
    "branch_monkey_mcp/static/**",
    "branch_monkey_mcp/skills/**",
]

# Bake the git commit count into branch_monkey_mcp/_version.py at build time
# so the runtime relay can show an accurate version even though the wheel
# install ships without a .git directory. See hatch_build.py.
[tool.hatch.build.hooks.custom]
path = "hatch_build.py"
